# Echelon

./: .cursorrules  .env.example  .env.example.jwt  .gitignore  .loa-version.json  ACTUAL_FILE_TREE.txt  BOOTSTRAP_CONTEXT.md  BUTTERFREEZONE.md  CLEANUP_OLD_VENV.md  CONTEXT.md  CREATE_VENV_PYTHON312.sh  DATABASE_SEED_INFO.md  DEBUG_VERCEL.md  DEPLOYMENT_CHECKLIST.md  DIAGNOSE_PIP_HANG.md  ECHELON_FINAL_WIRING.md  ERROR_ANALYSIS.md  FIX_CORRUPTED_VENV.sh  FIX_PIP_LIST_HANG.md  FIX_PIP_LIST_HANG.sh  FIX_PYTHON_VERSION.md  FIX_UVICORN_IMPORT.md  FORCE_REMOVE_VENV.sh  GIT_SECRETS_AUDIT.md  INSTALL_SLOWAPI.txt  MARKET_SYSTEMS_EXPLAINED.md  MINIMAL_INSTALL.sh  QUICK_FIX_VENV.md  RAILWAY_SETUP.md  README.md  README_SERVER.md  REMOVE_VENV_STEPS.md  RUN_UVICORN_CORRECTLY.md  SECURITY_IMPLEMENTATION.md  SECURITY_SUMMARY.md  SETUP_FRESH_VENV.md  TEST_CPMM_ODDS.md  TEST_ENDPOINTS.md  TEST_SITUATION_ROOM_API.md  UNLOCK_VENV.sh  (+21 more)
.claude/: checksums.json
backend/: abi.json  (+47 more)
verification/: pyproject.toml
verification/src/echelon_verify/: __init__.py  api.py  cli.py  config.py  models.py  pipeline.py  server.py  storage.py
verification/src/echelon_verify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
verification/src/echelon_verify/certificate/: generator.py
verification/tests/: conftest.py  test_api.py  test_certificate.py  test_config.py  test_ingestion.py  test_models.py  test_oracle_adapters.py  test_pipeline.py  test_scoring.py  test_storage.py
verification/tests/fixtures/: sample_certificate.json  sample_oracle_output.json  sample_pr.json
(+758 files in other folders)
