[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echelon-verify"
version = "0.1.0"
description = "Community Oracle Verification Pipeline for Echelon"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12",
    "httpx>=0.28",
    "anthropic>=0.74",
    "click>=8.0",
    "fastapi>=0.121",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
echelon = "echelon_verify.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
